GUI plus zmiany w client i GameSession